--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/movie_scope1
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_scope_final
 spring.datasource.username=root
 spring.datasource.password=Yash@6889
 
@@ -20,3 +20,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 loggin.level.org.hi
+spring.main.allow-circular-references=true
